--- a/index.html
+++ b/index.html
@@ -2,227 +2,207 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ZŁOMTO.PL – Auto za 100 zł</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ZłomTo.pl – Odbiór pojazdu i 100 zł</title>
   <style>
-    * {
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9;
-      color: #111;
+      background-color: #fff;
+      color: #000;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 1rem;
     }
 
     header {
       text-align: center;
-      max-width: 800px;
-      width: 100%;
+      padding: 40px 20px 10px;
     }
 
-    header img {
-      max-width: 220px;
+    header img.logo {
+      max-width: 280px;
       height: auto;
-      margin: 1rem auto 0.5rem;
-      display: block;
+    }
+
+    .silhouette-container {
+      width: 280px;
+      overflow: hidden;
+      height: 40px;
+      position: relative;
+      margin: 10px auto;
     }
 
     .silhouette {
       width: 100%;
-      height: 80px;
-      background: url('car-silhouette.png') repeat-x bottom;
-      animation: moveCars 6s linear infinite;
-      margin: 0 auto;
-      max-width: 800px;
+      height: 40px;
+      background: url('car-silhouette.png') no-repeat;
+      background-size: contain;
+      position: absolute;
+      top: 0;
+      right: -100%;
+      animation: scrollLeft 8s linear infinite;
     }
 
-    @keyframes moveCars {
-      from {
-        background-position-x: 100%;
+    @keyframes scrollLeft {
+      0% {
+        right: -100%;
       }
-      to {
-        background-position-x: 0%;
+      100% {
+        right: 100%;
       }
     }
 
     h1 {
-      font-size: 1.8rem;
-      font-weight: 800;
-      margin: 1rem 0 0.5rem;
-    }
-
-    .subtext {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      margin-bottom: 2rem;
-      color: #555;
-    }
-
-    .subtext strong {
-      display: block;
-      margin-top: 0.5rem;
-    }
-
-    .form-container {
-      background-color: #fff;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.06);
-      max-width: 600px;
-      width: 100%;
-      margin-bottom: 3rem;
-    }
-
-    .form-container h2 {
-      font-size: 1.4rem;
+      font-size: 22px;
       font-weight: 600;
-      margin-bottom: 1rem;
+      margin: 40px 20px 10px;
       text-align: center;
     }
 
-    form {
-      display: flex;
+    .subtext {
+      text-align: center;
+      font-size: 16px;
+      line-height: 1.5;
+      margin: 0 20px 40px;
+    }
+
+    .form-step {
+      display: none;
       flex-direction: column;
-      gap: 1rem;
+      align-items: center;
     }
 
-    label {
-      font-weight: 600;
-      margin-bottom: 0.25rem;
+    .form-step.active {
+      display: flex;
     }
 
-    input, textarea {
-      padding: 0.75rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 1rem;
+    form {
+      max-width: 400px;
+      width: 90%;
+      margin: 0 auto 40px;
+    }
+
+    input, select, button {
+      font-size: 16px;
+      padding: 12px;
+      margin: 10px 0;
+      width: 100%;
+      box-sizing: border-box;
     }
 
     button {
       background-color: #000;
       color: #fff;
       border: none;
-      padding: 0.9rem;
-      border-radius: 8px;
-      font-size: 1rem;
-      font-weight: 600;
       cursor: pointer;
-      transition: background-color 0.2s ease-in-out;
+      border-radius: 4px;
     }
 
-    button:hover {
-      background-color: #333;
-    }
-
-    .thank-you {
-      display: none;
+    .thanks-message {
       text-align: center;
-      font-size: 1.2rem;
-      margin-top: 2rem;
-      color: #28a745;
+      display: none;
+      font-size: 18px;
+      margin: 40px 20px;
     }
 
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 1.4rem;
+    @media (max-width: 600px) {
+      header img.logo {
+        max-width: 220px;
       }
-      .subtext {
-        font-size: 1rem;
+      .silhouette-container {
+        width: 220px;
       }
     }
   </style>
 </head>
 <body>
-
   <header>
-    <img src="logo - zlomto.pl.png" alt="ZŁOMTO.PL logo" />
-    <div class="silhouette"></div>
-    <h1>Odbierzemy Twój pojazd bezpłatnie z dowolnego miejsca w Polsce i zapłacimy Ci 100 zł.</h1>
-    <p class="subtext">
-      Niesprawny? – Nie ma problemu<br>
-      Brak kół? – Nie ma problemu<br>
-      Brak ubezpieczenia? – Nie ma problemu<br><br>
-      Wypełnij prosty formularz. To zajmie tylko chwilę.
-    </p>
+    <img src="logo - zlomto.pl.png" alt="ZłomTo.pl Logo" class="logo" />
+    <div class="silhouette-container">
+      <div class="silhouette"></div>
+    </div>
   </header>
 
-  <section class="form-container" id="form-section">
-    <h2>Formularz zgłoszeniowy</h2>
-    <form id="sellForm" action="https://formspree.io/f/xwkgrvze" method="POST">
-      <label for="name">Imię i nazwisko właściciela</label>
-      <input type="text" id="name" name="Imię i nazwisko" required>
+  <h1>Odbierzemy Twój pojazd bezpłatnie z dowolnego miejsca w Polsce i zapłacimy Ci 100 zł.</h1>
 
-      <label for="address">Adres zamieszkania</label>
-      <input type="text" id="address" name="Adres zamieszkania" required>
+  <div class="subtext">
+    Niesprawny? – Nie ma problemu<br />
+    Brak kół? – Nie ma problemu<br />
+    Brak ubezpieczenia? – Nie ma problemu<br /><br />
+    Wypełnij prosty formularz. To zajmie tylko chwilę.
+  </div>
 
-      <label for="pesel">PESEL właściciela</label>
-      <input type="text" id="pesel" name="PESEL" required>
-
-      <label for="car">Marka i model auta</label>
-      <input type="text" id="car" name="Marka i model" required>
-
-      <label for="vin">Numer VIN</label>
-      <input type="text" id="vin" name="VIN" required>
-
-      <label for="plates">Numer rejestracyjny</label>
-      <input type="text" id="plates" name="Numer rejestracyjny" required>
-
-      <label for="year">Rok produkcji</label>
-      <input type="number" id="year" name="Rok produkcji" required>
-
-      <label for="mileage">Przebieg</label>
-      <input type="number" id="mileage" name="Przebieg" required>
-
-      <label for="email">Email (do wysyłki umowy)</label>
-      <input type="email" id="email" name="Email" required>
-
-      <label for="phone">Numer telefonu</label>
-      <input type="tel" id="phone" name="Telefon" required>
-
-      <input type="hidden" name="_cc" value="tiptop.zrobione@gmail.com">
-
-      <button type="submit">Wyślij zgłoszenie</button>
-    </form>
-
-    <div class="thank-you" id="thankYouMessage">
-      Dziękujemy za wypełnienie formularza!<br>
-      Odezwiemy się w ciągu 2 dni roboczych.<br>
-      Pracujemy od poniedziałku do soboty, 9:00–15:00.
+  <form id="zlomForm">
+    <div class="form-step active">
+      <input type="text" name="imie" placeholder="Imię" required />
+      <button type="button" onclick="nextStep()">Dalej</button>
     </div>
-  </section>
+
+    <div class="form-step">
+      <input type="tel" name="telefon" placeholder="Numer telefonu" />
+      <input type="email" name="email" placeholder="Adres e-mail (opcjonalnie)" />
+      <button type="button" onclick="nextStep()">Dalej</button>
+    </div>
+
+    <div class="form-step">
+      <input type="text" name="marka_model" placeholder="Marka i model pojazdu" required />
+      <button type="button" onclick="nextStep()">Dalej</button>
+    </div>
+
+    <div class="form-step">
+      <input type="text" name="rok" placeholder="Rok rejestracji" required />
+      <button type="button" onclick="nextStep()">Dalej</button>
+    </div>
+
+    <div class="form-step">
+      <input type="text" name="nr_rejestracyjny" placeholder="Numer rejestracyjny" required />
+      <button type="button" onclick="nextStep()">Dalej</button>
+    </div>
+
+    <div class="form-step">
+      <select name="kola" required>
+        <option value="">Czy pojazd posiada koła?</option>
+        <option value="tak">Tak</option>
+        <option value="nie">Nie</option>
+      </select>
+      <button type="button" onclick="nextStep()">Dalej</button>
+    </div>
+
+    <div class="form-step">
+      <select name="ubezpieczenie" required>
+        <option value="">Czy pojazd posiada ubezpieczenie?</option>
+        <option value="tak">Tak</option>
+        <option value="nie">Nie</option>
+      </select>
+      <button type="submit">Wyślij zgłoszenie</button>
+    </div>
+  </form>
+
+  <div class="thanks-message" id="thanksMessage">
+    Dziękujemy za wypełnienie formularza!<br />
+    Odezwzwiemy się w ciągu 2 dni roboczych.<br />
+    Pracujemy od poniedziałku do soboty, 9:00–15:00.
+  </div>
 
   <script>
-    const form = document.getElementById('sellForm');
-    const thankYouMessage = document.getElementById('thankYouMessage');
+    let currentStep = 0;
+    const steps = document.querySelectorAll('.form-step');
 
-    form.addEventListener('submit', function (e) {
+    function nextStep() {
+      if (currentStep < steps.length - 1) {
+        steps[currentStep].classList.remove('active');
+        currentStep++;
+        steps[currentStep].classList.add('active');
+      }
+    }
+
+    document.getElementById('zlomForm').addEventListener('submit', function (e) {
       e.preventDefault();
-      const formData = new FormData(form);
-      fetch(form.action, {
-        method: "POST",
-        body: formData,
-        headers: {
-          'Accept': 'application/json'
-        }
-      }).then(response => {
-        if (response.ok) {
-          form.reset();
-          form.style.display = 'none';
-          thankYouMessage.style.display = 'block';
-        } else {
-          alert("Wystąpił błąd. Spróbuj ponownie.");
-        }
-      });
+      steps[currentStep].classList.remove('active');
+      document.getElementById('thanksMessage').style.display = 'block';
     });
   </script>
-
 </body>
 </html>
