--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <title>ZłomTo.pl – Odbiór pojazdu i 100 zł</title>
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #fff;
+      background-color: #f9f9f9;
       color: #000;
       display: flex;
       flex-direction: column;
@@ -19,52 +20,54 @@
     header {
       text-align: center;
       padding: 40px 20px 10px;
+      position: relative;
     }
 
     header img.logo {
-      max-width: 280px;
+      max-width: 320px;
       height: auto;
     }
 
     .silhouette-container {
-      width: 280px;
+      width: 240px;
+      height: 30px;
       overflow: hidden;
-      height: 40px;
       position: relative;
-      margin: 10px auto;
+      margin: 10px auto 0;
     }
 
     .silhouette {
       width: 100%;
-      height: 40px;
+      height: 30px;
       background: url('car-silhouette.png') no-repeat;
       background-size: contain;
       position: absolute;
       top: 0;
-      right: -100%;
-      animation: scrollLeft 8s linear infinite;
+      left: 100%;
+      animation: scrollRightToLeft 10s linear infinite;
     }
 
-    @keyframes scrollLeft {
+    @keyframes scrollRightToLeft {
       0% {
-        right: -100%;
+        left: 100%;
       }
       100% {
-        right: 100%;
+        left: -100%;
       }
     }
 
     h1 {
-      font-size: 22px;
+      font-size: 24px;
       font-weight: 600;
-      margin: 40px 20px 10px;
+      margin: 40px 20px 20px;
       text-align: center;
+      max-width: 800px;
     }
 
     .subtext {
       text-align: center;
       font-size: 16px;
-      line-height: 1.5;
+      line-height: 1.6;
       margin: 0 20px 40px;
     }
 
@@ -90,6 +93,8 @@
       margin: 10px 0;
       width: 100%;
       box-sizing: border-box;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
 
     button {
@@ -97,7 +102,11 @@
       color: #fff;
       border: none;
       cursor: pointer;
-      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #333;
     }
 
     .thanks-message {
@@ -109,10 +118,20 @@
 
     @media (max-width: 600px) {
       header img.logo {
-        max-width: 220px;
+        max-width: 240px;
       }
+
       .silhouette-container {
-        width: 220px;
+        width: 200px;
+        height: 24px;
+      }
+
+      .silhouette {
+        height: 24px;
+      }
+
+      h1 {
+        font-size: 20px;
       }
     }
   </style>
@@ -141,8 +160,7 @@
     </div>
 
     <div class="form-step">
-      <input type="tel" name="telefon" placeholder="Numer telefonu" />
-      <input type="email" name="email" placeholder="Adres e-mail (opcjonalnie)" />
+      <input type="tel" name="telefon" placeholder="Numer telefonu" required />
       <button type="button" onclick="nextStep()">Dalej</button>
     </div>
 
